--- a/calc.css
+++ b/calc.css
@@ -29,6 +29,7 @@ body {
     height: 76px;
     padding: 8px;
     font-size: 50px;
+    line-height: 1.5;
 }
 
 
@@ -39,7 +40,7 @@ body {
     justify-content: center;
 }
 
-.zero, .equals {
+#zero, .equals {
    flex: 1;
 }
 
