--- a/calc.css
+++ b/calc.css
@@ -1,8 +1,14 @@
+html {
+    height: 100%;
+}
+
 body {
-    height: 100vh;
+    min-height: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    background: floralwhite;
 }
 
 .calc-container {
@@ -46,6 +52,9 @@ body {
 #zero, .equals {
    flex: 1;
 }
+button.operator {
+    flex: 1;
+}
 
 button {
     height: 72px;
@@ -58,11 +67,23 @@ button {
     font-size: 25px;
 }
 
+.footer {
+    margin-top: auto;
+    background: floralwhite;
+    color: black;
+    width: 100%;
+    height: 25px;
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+}
+a {
+    text-decoration: none;
+    color: black;
+  }
+  
 .title-container > p {
     color: aliceblue;
-}
-button.operator {
-    flex: 1;
 }
 /* button background colors */
 .all-clear {
