--- a/calc.css
+++ b/calc.css
@@ -1,14 +1,15 @@
-html {
+/* html {
     height: 100%;
-}
+} */
 
 body {
-    min-height: 100%;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background: floralwhite;
+    margin: 0px;
 }
 
 .calc-container {
@@ -17,9 +18,9 @@ body {
     padding: 30px;
     gap: 10px;
     border: 2px solid black;
-    background: black;
     border-radius: 50px;
     overflow-wrap: break-word;
+    margin: auto;
 }
 
 .btn-container {
